# OpenVerifiableLLM

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  test_model_init.py
.github/workflows/: ci.yml  coderabbit-approval.yml  sync-pr-labels.yml  version-release.yml
examples/: demo_util.py
openverifiablellm/: environment.py  tokenize_data.py  train.py  utils.py  verify.py
openverifiablellm/model/: __init__.py  attention.py  config.py  model.py
openverifiablellm/tokenizer/: __init__.py  sentencepiece_tokenizer.py
scripts/: run_pipeline.py
tests/: benchmark.py  test_environment.py  test_model_init.py  test_tokenizer.py  test_util.py  test_verify.py
