[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openverifiablellm"
version = "0.1.0"
description = "Deterministic dataset hashing utilities for verifiable LLM training"
authors = [
    {name = "Varshini"}
]
requires-python = ">=3.9"

dependencies = [
    "defusedxml",
    "tokenizers==0.15.2"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
include = ["openverifiablellm*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning"
]
